sanger/sites/matthias-gut/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matthias-gut
spec:
  selector:
    matchLabels:
      app: matthias-gut
  replicas: 1
  template:
    metadata: 
      name: matthias-gut
      labels:
        app: matthias-gut
    spec:
      volumes:
        - name: indexfiles
          emptyDir: {}
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: matthias-gut
        ports:
        - containerPort: 80
          name: http
        command: ["/bin/sh", "-c", "cp -r /data/kubespray/sanger/sites/matthias-gut/site/. /usr/share/nginx/html/ && nginx -g 'daemon off;'"]
        volumeMounts:
          - name: indexfiles
            mountPath: /data
        resources:
          requests:
            memory: "128M"
            cpu: "0.1"
          limits:
            memory: "512M"
            cpu: "0.7"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matthias-gut-atac
spec:
  selector:
    matchLabels:
      app: matthias-gut-atac
  replicas: 1
  template:
    metadata: 
      name: matthias-gut-atac
      labels:
        app: matthias-gut-atac
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: matthias-gut-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.12.0
        imagePullPolicy: IfNotPresent
        name: matthias-gut-atac
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/atac_processed.h5ad", "-t", "ATAC proccesed", "--host", "0.0.0.0", "--port", "5005"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "4Gi"
            cpu: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matthias-gut-rna
spec:
  selector:
    matchLabels:
      app: matthias-gut-rna
  replicas: 1
  template:
    metadata: 
      name: matthias-gut-rna
      labels:
        app: matthias-gut-rna
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: matthias-gut-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.12.0
        imagePullPolicy: IfNotPresent
        name: matthias-gut-rna
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/rna_processed.h5ad", "-t", "RNA processed", "--host", "0.0.0.0", "--port", "5005"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "2Gi"
            cpu: 1
---
